--- a/vignettes/gtfs2emis-vignette.Rmd
+++ b/vignettes/gtfs2emis-vignette.Rmd
@@ -1,63 +1,65 @@
 ---
 title: "Introduction to gtfs2emis"
 author: "Joao Bazzo, Rafael H. M. Pereira, Pedro R. Andrade"
-abstract: Package `gtfs2emis` generates emission estimates for public transport networks based on GTFS data.
-output: github_document
+abstract: "Package `gtfs2emis` generates emission estimates for public transport networks based on GTFS data."
+date: "`r Sys.Date()`"
+output: rmarkdown::html_vignette
 urlcolor: blue
 vignette: |
 %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{gtfs2emis}
-  ---
-  7 August 2020
-  
-  ```{r, include = FALSE}
-  knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>")
-  ```
-  
-  # Introduction
-  
-  The package `gtfs2emis` estimates hot exhaust emissions for public transport networks at high spatial and temporal resolutions based on GTFS data. This vignette introduces the main functions of the package. Here are the following packages we will use:
-  
-  ```{r, message = FALSE}
-  library(magrittr)
-  library(ggplot2)
-  ```
-  
-  # GTFS data
-  
-  To estimate emissions from GTFS data, we need first to compute `speed` and distance (`dist`) of each trip between pairs of public transport stops/stations.
-  This information is created when we convert GTFS data to GPS-like
-  records, using `gtfs2gps::gtfs2gps()`. The example below uses a sample of the GTFS data from São Paulo municipality, in Brazil. In this example we will only process the trips of two `shape_id`s to speedup processing time.
-  
-  ```{r, message = FALSE}
-  poa <- gtfs2gps::read_gtfs(system.file("extdata/poa.zip", package = "gtfs2gps")) 
-  poa_subset <- poa %>% gtfs2gps::filter_single_trip()
-  poa_gps <- gtfs2gps::gtfs2gps(poa)
-  
-  # the ouput is a data.table, like this
-  head(poa_gps)
-  ```
-  
-  The GPS-like data can be converted into line segments (`linestring`). This conversion breaks the trips into separate segments between consecutive pairs of stops. This will give us a much smaller data set to work on, and allows to capture the spatial-temporal variation of speeds and emissions levels. 
-  
-  
-  ```{r}
-  poa_gpslines <- gtfs2gps::gps_as_sflinestring(poa_gps) 
-  dim(poa_gpslines)
-  
-  # the bus routes look like this:
-  plot(poa_gpslines['speed'])
-  ```
-  
-  We will also update units of measurement of the attributes in our data.
-  
-  *This means that each line is a bus?*
-  
-  ```{r}
-  poa_gpslines$dist <- units::set_units(poa_gpslines$dist, "km")
+---
+
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+collapse = TRUE,
+comment = "#>")
+```
+
+# Introduction
+
+The package `gtfs2emis` estimates hot exhaust emissions for public transport systems at high spatial and temporal resolutions based on GTFS data. This vignette introduces the main functions of the package. Here are the following packages we will use:
+
+```{r, message = FALSE}
+library(gtfs2emis)
+library(magrittr)
+library(ggplot2)
+```
+
+# GTFS data
+
+To estimate emissions from GTFS data, we need first to compute `speed` and distance (`dist`) of each trip between pairs of public transport stops/stations.
+This information is created when we convert GTFS data to GPS-like
+records, using `gtfs2gps::gtfs2gps()`. The example below uses a sample of the GTFS data from the city of Porto Alegre, in Brazil. In this example we will only process the trips of two `shape_id`s to speedup processing time.
+
+```{r, message = FALSE}
+poa <- gtfs2gps::read_gtfs(system.file("extdata/poa.zip", package = "gtfs2gps")) 
+poa_subset <- poa %>% gtfs2gps::filter_single_trip()
+poa_gps <- gtfs2gps::gtfs2gps(poa)
+
+# the ouput is a data.table, like this
+head(poa_gps)
+```
+
+The GPS-like data can be converted into line segments (`linestring`). This conversion breaks the trips into separate segments between consecutive pairs of stops. This will give us a much smaller data set to work on. It also allows to capture the spatial-temporal variation of speeds and emission levels. 
+
+
+```{r}
+poa_gpslines <- gtfs2gps::gps_as_sflinestring(poa_gps) 
+dim(poa_gpslines)
+
+# the bus routes look like this:
+plot(poa_gpslines['speed'])
+```
+
+We will also update units of measurement of the attributes in our data.
+
+*This means that each line is a bus?*
+
+```{r}
+poa_gpslines$dist <- units::set_units(poa_gpslines$dist, "km")
 
 # The data shows the average speed and distance between pairs of stops
 head(poa_gpslines)
@@ -81,9 +83,10 @@ total_fleet <- data.table::data.table(year = c(2005, 2010:2012, 2014:2015, 2017:
 total_fleet[,fleet_composition := bus / sum(bus)]
 
 # The input data looks like this
+sum(total_fleet$fleet_composition)
+
 head(total_fleet)
 
-sum(total_fleet$fleet_composition)
 ```
 
 ## Detailed fleet data
@@ -100,9 +103,11 @@ head(det_fleet)
 
 # Emission factor
 
-Before we estimate emission levels, we need first need to calculate what are the emission factors for each pollutant given a combination of fleet characteristics. For Europe and the United States, we can use more rigorous functions that also account for speed information as well. The `gtfs2emis` package generates emission factors expressed in `g/km` for each trip segment between consecutive pairs of stops. The emission factors currently available in `gtfs2emis` are from Europe, US, and Brazil, see below.
+Before we estimate emission levels, we need first need to select the emission factors for each pollutant given a combination of fleet characteristics. The emission factors currently available in `gtfs2emis` are from Europe, US, and Brazil, see below. For Europe and the United States, the available emission factors are more rigorous because they also account for vehicle speed.
 
-## European emission factors for buses
+The `gtfs2emis` package generates emission factors expressed in `g/km` for each trip segment between consecutive pairs of stops. 
+
+## Europe: emission factors for buses
 
 The `ef_europe` function can be used to estimate the emission factors for multiple pollutants considering different types of vehicles and technologies listed in the [EMEP/EEA air pollutant emission inventory guidebook 2019](https://www.eea.europa.eu/themes/air/air-pollution-sources-1/emep-eea-air-pollutant-emission-inventory-guidebook). See documentation for list of options `?ef_europe`. Supported pollutants: CO, NOx, HC, PM, CH4, NMHC, CO2, SO2, Pb, FC , NO, and NO2.
 
@@ -120,7 +125,7 @@ EF_europe <- ef_europe(pollutant = c("CO", "PM10"),
 head(EF_europe, 3)
 ```
 
-## United States emission factors for buses
+## United States: emission factors for buses
 
 For the United States, the `ef_usa` function estimates emission factors for multiple pollutants considering different types of fuel, speed and fleet age information based on the [California EMission Factor model (EMFAC2017)](https://arb.ca.gov/emfac/). See documentation for list of options `?ef_usa`. Supported pollutants: CO, NOx, Hydrocarbons as TOG (total organic gases), ROG (reactive organic gases), THC, CH4, PM10, PM2.5, SOx, CO2, N2O and CH4.
 
@@ -133,13 +138,13 @@ EF_usa <- ef_usa(pollutant = c("CO", "PM10"),
 head(EF_usa, 3)
 ```
 
-## Brazil emission factors for buses
+## Brazil: emission factors for buses
 
 For buses in Brazil, the `ef_brazil` functions estimates emission factors considering model year and types of buses. These estimates are based on data from [CETESB 2017](https://cetesb.sp.gov.br/veicular/) obtained via the [`vein` package](https://atmoschem.github.io/vein/). Supported pollutants: CO, HC, NMHC, CH4, NOx, CO2, RCHO, ETOH, PM, N2O, KML, FC, NO2, NO, gD/KWH, gCO2/KWH, RCHO.
 , CO_0km, HC_0km, NMHC_0km, NOx_0km, NO2_0km, NO_0km, RCHO_0km, ETOH_0km, and FS (fuel sales).
 
 
-_Acho que não é necessario mostrar os fatores 0km, pois só ussados os deteriorados. Inclusive, os fatores deteriorados só aplicam a veículos com moor Otto ou Flex, então não aplica incluir aqui. FS tambem não, pois é pensado na estimativa de emissões evaporativas desde o veículo ao ambiente aomomento de abastecimento_
+_Acho que não é necessario mostrar os fatores 0km, pois só usados os deteriorados. Inclusive, os fatores deteriorados só aplicam a veículos com motor Otto ou Flex, então não aplica incluir aqui. FS tambem não, pois é pensado na estimativa de emissões evaporativas desde o veículo ao ambiente ao momento de abastecimento_
 
 ```{r}
 EF_brazil <- ef_brazil(pollutant = c("CO", "CO2"),
@@ -150,7 +155,7 @@ head(EF_brazil, 3)
 
 # Emission 
 
-Now that we have route segment-level information on vehicles, distances and emission factors, emissions levels can be estimated as a product between distances (units `km`) and emission factors (units `g/km`). Using the `emis` function we can estimate emissions at high spatial and temporal resolutions.
+Now that we have route segment-level information on vehicles, distances, and speeds, emissions levels can be estimated as a product between distances (units `km`), emission factors (units `g/km`) and speed (units `km/h`) in the case of American and European emission factors.
 
 Here is an example using using different emission factors from Europe, USA and Brazil.
 
@@ -179,7 +184,7 @@ head(emi_brazil, 3)
 ```
 # Analyzing public transport emission levels
 
-To facilitate the analysis of these emissions estimates, the `gtfs2emis` package also includes the `emis_post`, a handy function to aggregate results by time at different temporal resolutions. This allows users to examine how the transport emissions of a given public transport network varies over the day.
+To facilitate the analysis of these emissions estimates, the `gtfs2emis` package also includes the `emis_summary` function, a handy function to aggregate results by time at different temporal resolutions. This allows users to examine how the transport emissions of a given public transport network varies over the day.
 
 ## Hour time stamp
 ```{r}
@@ -198,7 +203,8 @@ ggplot(data = hour_emissions) +
 ## Spatialize
 Finally, we can also map how emission levels varies across space and time of the day. To do this, we need first to aggregate our emission estimates on a spatial grid.
 
-In this example, we are using some support functions from the `VEIN` package, but this aggregation can be done using any spatial polygons, including hexagonal grids, census tracts etc.
+The spatial aggregation can be done using any spatial polygons, including hexagonal grids, census tracts etc. In this example we are using some support functions from the `VEIN` package to generate a regular grid.
+
 
 ```{r}
 # PEDRO: funcao para escolher a resolucao? esta funcao deveria receber um objeto
@@ -209,7 +215,7 @@ grid_gps <- vein::make_grid(spobj = poa_gpslines$geometry, width =  0.25 / 102.4
 plot(grid_gps["id"])
 ```
 
-Emissions can be allocated into grid through `emis_grid` function, which sums the total emissions into a single grid cell.
+Emissions can be aggregated into the grid with the `emis_grid` function, which sums the total emissions into each single grid cell.
 
 ```{r}
 # convert estimates to sf spatial object
